Use Java 17 compatible list access in OpenAI test